--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ buildscript{ dependencies{
 }
 plugins {
 alias(libs.plugins.android.application) apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
