splash screen is done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     //carousel
 
     implementation 'com.github.sparrow007:carouselrecyclerview:1.2.6'
+    implementation 'com.airbnb.android:lottie:6.3.0'
 }
