--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.HungerHub"
         tools:targetApi="31">
         <activity
-            android:name=".Authentication.MainActivity"
+            android:name=".homeTabs.MainTabsActivity"
             android:exported="true">
             <intent-filter>
 
@@ -24,9 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".homeTabs.MainTabsActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".homeTabs.MainTabsActivity"-->
+<!--            android:exported="false" />-->
     </application>
 
 </manifest>
